--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,31 @@
+body{
+  position: relative;
+}
 .form-container {
     width: 400px;
     margin: auto;
   }
+  /* .footer{
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: rgb(196, 196, 196);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  } */
+  #page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(223, 223, 223);
+}
