--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,42 @@
 body{
-  position: relative;
+  text-align: center;
+  width: 1365px;
 }
-.form-container {
-    width: 400px;
-    margin: auto;
-  }
-  /* .footer{
-    margin-top: 1rem;
-    padding: 1rem;
-    background-color: rgb(196, 196, 196);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  } */
-  #page-container {
-  position: relative;
-  min-height: 100vh;
+.header-main{
+  padding: 10px;
+  margin: 5px;
+  right: 0px;
+  background-color: #c3f1cdd7;
+  border-radius: 10px;
 }
+.content{
+  padding-top: 25px;
+  padding-bottom: 25px;
+  display: inline-flex;
 
-#content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
 }
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: rgb(223, 223, 223);
+.sidebar{
+  float: left;
+  padding-left: 35px;
+}
+.products{
+  float: right;
+  padding-top: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.footer{
+  padding: 10px;
+  margin: 5px;
+  background-color: rgb(214, 245, 232);
+  border-radius: 10px;
+}
+.entry{
+  background-image: linear-gradient(to bottom right, rgb(163, 233, 238), rgb(0, 140, 255));
+}
+.success{
+  background-image: linear-gradient(to bottom right, rgb(163, 233, 238), rgb(0, 140, 255));
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 380px;
 }
